--- a/frontend/home.css
+++ b/frontend/home.css
@@ -5,8 +5,13 @@ body {
 .banner-text {
   font-size: 24px;
   font-weight: bold;
-  text-align: center;
-  margin: 20px 0;
+  margin: 20px 5vw;
+}
+
+.poster-text {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 20px 5vw;
 }
 
 .banner-ad {
@@ -22,4 +27,5 @@ body {
   cursor: pointer;
   margin: 20px auto;
   text-align: center;
+  border-radius: 20px;
 }
