--- a/frontend/members.css
+++ b/frontend/members.css
@@ -59,6 +59,8 @@ h1 {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
+  white-space: nowrap;   
+  display: inline-block;
 }
 
 .memberId {
