--- a/frontend/footer.css
+++ b/frontend/footer.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    padding-bottom: 60px;
     width: 100vw;
     font-family: 'Anuphan';
     overflow-x: hidden;
@@ -22,6 +23,7 @@ body {
     left: 0;
     position: fixed;
     box-sizing: border-box; 
+    z-index: 999;
 }
 
 .footerBox button {
