--- a/frontend/navbar.css
+++ b/frontend/navbar.css
@@ -8,30 +8,35 @@
   --dark2: #D597CE;
   --white: #FFFFFF;
   --black: #000000;
+  --nav-footer-bg: var(--color4);
+}
 
-  /* --bg: var(--color2);
-  --accent: var(--color4); */
+nav, footer {
+  background-color: var(--nav-footer-bg);
 }
 
 body {
   margin: 0;
   width: 100vw;
-  padding-top: 80px;
+  padding-top: 100px;
   font-family: 'Anuphan';
   overflow-x: hidden;
+  background-color: var(--bg);
+  color: var(--black);
 }
 
-/* body.dark {
-  --bg: var(--dark1);
-  --accent: var(--dark1);
-} */
+body.dark {
+  background-color: var(--dark1);
+  color: var(--color2);
+  --nav-footer-bg: var(--dark2);
+}
 
 .navbox {
   display: flex;
-  background-color: var(--color4);
+  /* background-color: var(--color4); */
   align-items: center;
   justify-content: space-between;
-  padding: 10px 10vw;
+  padding: 5px 10vw;
   height: fit-content;
   width: 100%;
   top: 0;
@@ -47,13 +52,23 @@ body {
   object-fit: contain;
 }
 
+.logoDiv {
+  width: 96px;
+}
+
+.logoDiv img {
+  height: 70px;     
+  width: auto;     
+  object-fit: contain;
+}
+
 .searchBox {
   display: flex;
   align-items: center;
   background-color: var(--white);
   padding: 10px;
   border-radius: 50px;
-  gap: 12px;
+  justify-content: space-between;
   height: 48px;
   width: 30vw;
   box-sizing: border-box; 
