--- a/frontend/members.css
+++ b/frontend/members.css
@@ -11,7 +11,7 @@ body {
 }
 
 .goBackBt {
-    background-color:  var(--color2);
+    background-color:  transparent;
     border: none;
     width: fit-content;
     cursor: pointer;
