--- a/frontend/navbar.css
+++ b/frontend/navbar.css
@@ -53,7 +53,7 @@ body.dark {
 }
 
 .logoDiv {
-  width: 96px;
+  width: 106px;
 }
 
 .logoDiv img {
@@ -92,8 +92,9 @@ body.dark {
 .changeThemeDiv {
   display: flex;
   align-items: center;
-  gap: 10%;
+  gap: 10px;
   height: 60px;
+  width: auto;
   cursor: pointer;
 }
 
