--- a/frontend/members.css
+++ b/frontend/members.css
@@ -36,6 +36,7 @@ h1 {
   flex-wrap: wrap;
   gap: 100px;
   justify-content: center;
+  text-align: center;
   margin: 5vh 10vw 30vh 10vw;
 }
 
@@ -45,6 +46,7 @@ h1 {
   align-items: center;
   padding: 10px;
   width: 150px;
+  text-align: center;
 }
 
 .memberImg {
@@ -52,6 +54,7 @@ h1 {
   height: 200px;
   object-fit: cover;
   border-radius: 50%;
+  box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.5); /* x, y, blur, color */
 }
 
 .memberName {
@@ -66,4 +69,5 @@ h1 {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
+  margin-top: 15px;
 }
