--- a/frontend/search_result.css
+++ b/frontend/search_result.css
@@ -7,14 +7,14 @@
   --img-aspect: 16 / 9;
 }
 
-/* .poster-text {
+.poster-text {
   width: 100%;
   max-width: 1200px;
-  margin: 20px auto 8px;
+  margin: 20px 20px;
   padding: 0 16px;
   font-size: 1.125rem; 
   font-weight: 600;
-} */
+}
 
 /* Grid container */
 /* .series-grid {
